Removed some commented out code

--- a/index.html
+++ b/index.html
@@ -27,32 +27,26 @@
 
 
   <form id="sign-up-form" class="border">
-    <fieldset>
       <legend>Sign Up</legend>
       <input required type="email" placeholder="email" name="credentials[email]">
       <input required type="password" placeholder="password" name="credentials[password]">
-      <input required type="password" placeholder="password_confirmation" name="credentials[password_confirmation]">
+      <input required type="password" placeholder="confirm password" name="credentials[password_confirmation]">
       <input type="submit" value="sign-up">
-    </fieldset>
   </form>
 
   <form id="sign-in-form" class="border">
-    <fieldset>
       <legend>Sign In</legend>
       <input required type="email" placeholder="email" name="credentials[email]">
       <input required type="password" placeholder="password" name="credentials[password]">
       <input type="submit" value="sign-in">
-    </fieldset>
   </form>
 
 
   <form id="change-password-form" class="Change Password">
-    <fieldset>
       <legend>Change Password</legend>
       <input required type="password" placeholder="old password" name="passwords[old]">
       <input required type="password" placeholder="new password" name="passwords[new]">
       <input type="submit" value="Change Password">
-    </fieldset>
   </form>
 
   <button id="sign-out-button">Sign Out</button>
